name:                jbi
version:             0.1.0.0
synopsis:            Just Build It - a "do what I mean" abstraction for Haskell build tools
-- description:
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2, GHC == 8.0.2, GHC == 8.1.*

library
  exposed-modules:     JBI
                     , JBI.Commands
                     , JBI.Commands.BuildTool
                     , JBI.Commands.Cabal
                     , JBI.Commands.Nix
                     , JBI.Commands.Stack
                     , JBI.Commands.Tool
                     , JBI.Environment
                     , JBI.Tagged

  build-depends:       base >=4.8 && <4.11
                     , Cabal >= 1.22.0.0 && < 2.1
                     , directory >= 1.2.5.0
                     , filepath >= 1.4.0.0 && < 1.5
                     , process >= 1.4.3.0 && < 1.7
                     , tagged == 0.8.*
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall

executable jbi
  main-is:             jbi.hs

  other-modules:       Paths_jbi

  build-depends:       jbi
                     , base
                     , groom == 0.1.*
                     , optparse-applicative >= 0.13.0.0 && < 0.15

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
